tests/frontend/fail/array/out_of_bounds_post.act
constructor of B
interface constructor()

creates

  int[3] a := [1,2,3]

ensures

  post(a[4]) == 0
